--- a/src/Vista/Matricula.form
+++ b/src/Vista/Matricula.form
@@ -21,7 +21,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanelMT" alignment="0" max="32767" attributes="0"/>
+          <Component id="jPanelMT" alignment="0" pref="280" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -95,7 +95,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="150" y="60" width="-1" height="30"/>
+              <AbsoluteConstraints x="140" y="60" width="-1" height="30"/>
             </Constraint>
           </Constraints>
         </Component>
